--- a/package.json
+++ b/package.json
@@ -5,14 +5,25 @@
   "main": "index.js",
   "scripts": {
     "gulp": "gulp",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
     "browser-sync": "^2.29.1",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-recommended": "^4.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-webpack-plugin": "^4.0.1",
     "fs": "^0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-ejs": "^5.1.0",
@@ -32,6 +43,12 @@
     "stylelint-config-recommended-scss": "^10.0.0",
     "stylelint-config-standard": "^32.0.0",
     "stylelint-config-standard-scss": "^8.0.0",
-    "stylelint-scss": "^4.6.0"
+    "stylelint-scss": "^4.6.0",
+    "webpack": "^5.79.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "del": "^7.0.0"
   }
 }
