--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "browser-sync": "^2.29.1",
+    "css-loader": "^6.7.3",
     "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-recommended": "^4.1.0",
@@ -34,9 +35,12 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
+    "gulp-sass-glob-use-forward": "^0.1.3",
     "postcss-reporter": "^7.0.5",
     "sass": "^1.62.0",
+    "style-loader": "^3.3.2",
     "stylelint": "^15.4.0",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-recommended": "^11.0.0",
@@ -49,6 +53,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "del": "^7.0.0"
+    "del": "^7.0.0",
+    "swiper": "^9.2.3"
   }
 }
